--- a/Pensamentos/Views/Base.lproj/Main.storyboard
+++ b/Pensamentos/Views/Base.lproj/Main.storyboard
@@ -69,6 +69,7 @@
                             </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="3Ca-hk-s6A">
                                 <rect key="frame" x="24" y="278" width="345" height="32"/>
+                                <color key="backgroundColor" red="0.75294117650000003" green="0.37647058820000001" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <segments>
                                     <segment title="Claro"/>
                                     <segment title="Escuro"/>
