fix: content compression resistance priority

--- a/Pensamentos/Views/Base.lproj/Main.storyboard
+++ b/Pensamentos/Views/Base.lproj/Main.storyboard
@@ -156,7 +156,7 @@
                                     <constraint firstAttribute="width" secondItem="q0Q-Gt-0WZ" secondAttribute="height" multiplier="750:666" id="o8f-24-F3q"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pensamento" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Mrp-dP-hhR">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="250" text="Pensamento" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Mrp-dP-hhR">
                                 <rect key="frame" x="30" y="359" width="333" height="47.666666666666686"/>
                                 <fontDescription key="fontDescription" name="SavoyeLetPlain" family="Savoye LET" pointSize="40"/>
                                 <nil key="textColor"/>
